force-app/main/default/objects/Application_Information__c/Application_Information__c.object-meta.xml
<CustomObject>
    <label>Application Information</label>
    <nameField>
        <displayFormat>APPINFO-{0000000}</displayFormat>
        <label>Application Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>