force-app/main/default/objects/Application_Information__c/fields/Address_Info__c.field-meta.xml
<CustomField>
    <fullName>Address_Info__c</fullName>
    <label>Address Information</label>
    <type>Address</type>
</CustomField>