force-app/main/default/objects/Application_Information__c/fields/BLApplication__c.field-meta.xml
<CustomField>
    <fullName>BLApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Application Information</relationshipLabel>
    <relationshipName>Application_Information</relationshipName>
    <type>Lookup</type>
</CustomField>