force-app/main/default/objects/Application_Information__c/fields/Business_Position__c.field-meta.xml
<CustomField>
    <fullName>Business_Position__c</fullName>
    <label>Corporate Title/Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>