force-app/main/default/objects/Application_Information__c/fields/Certification_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Certification_License_Number__c</fullName>
    <label>Certification License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>