force-app/main/default/objects/Application_Information__c/fields/Certified_Address__c.field-meta.xml
<CustomField>
    <fullName>Certified_Address__c</fullName>
    <label>Certified Address</label>
    <type>Address</type>
</CustomField>