force-app/main/default/objects/Application_Information__c/fields/Certified_State__c.field-meta.xml
<CustomField>
    <fullName>Certified_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>