force-app/main/default/objects/Application_Information__c/fields/Certifying_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Certifying_Entity_Name__c</fullName>
    <label>Certifying Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>