force-app/main/default/objects/Application_Information__c/fields/Detailed_Description_of_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description_of_Responsibilities__c</fullName>
    <label>Detailed Description of Responsibilities</label>
    <type>TextArea</type>
</CustomField>