force-app/main/default/objects/Application_Information__c/fields/Directory_Address__c.field-meta.xml
<CustomField>
    <fullName>Directory_Address__c</fullName>
    <label>Directory Address</label>
    <type>Address</type>
</CustomField>