force-app/main/default/objects/Application_Information__c/fields/Directory_Email__c.field-meta.xml
<CustomField>
    <fullName>Directory_Email__c</fullName>
    <label>Directory Email</label>
    <type>Email</type>
</CustomField>