force-app/main/default/objects/Application_Information__c/fields/Directory_Name__c.field-meta.xml
<CustomField>
    <fullName>Directory_Name__c</fullName>
    <label>Directory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>