force-app/main/default/objects/Application_Information__c/fields/Directory_Phone__c.field-meta.xml
<CustomField>
    <fullName>Directory_Phone__c</fullName>
    <label>Directory Phone</label>
    <type>Phone</type>
</CustomField>