force-app/main/default/objects/Application_Information__c/fields/Directory_Website__c.field-meta.xml
<CustomField>
    <fullName>Directory_Website__c</fullName>
    <label>Directory Website</label>
    <type>Url</type>
</CustomField>