force-app/main/default/objects/Application_Information__c/fields/Employer_Verifying_Ref_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Verifying_Ref_Phone_Number__c</fullName>
    <label>Employer / Verifying Ref Phone Number</label>
    <type>Phone</type>
</CustomField>