force-app/main/default/objects/Application_Information__c/fields/Employer_Verifying_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Verifying_Reference_Name__c</fullName>
    <label>Employer/Verifying Reference Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>