force-app/main/default/objects/Application_Information__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Self Employment</fullName>
            </value>
            <value>
                <fullName>Part-time Employment</fullName>
            </value>
            <value>
                <fullName>Clerkship</fullName>
            </value>
            <value>
                <fullName>Intership</fullName>
            </value>
            <value>
                <fullName>Externship</fullName>
            </value>
            <value>
                <fullName>Judicial Office</fullName>
            </value>
            <value>
                <fullName>Military Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>