force-app/main/default/objects/Application_Information__c/fields/Entity_DOB__c.field-meta.xml
<CustomField>
    <fullName>Entity_DOB__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>