force-app/main/default/objects/Application_Information__c/fields/Entity_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>