force-app/main/default/objects/Application_Information__c/fields/Entity_SSN__c.field-meta.xml
<CustomField>
    <fullName>Entity_SSN__c</fullName>
    <label>Social Security Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>