force-app/main/default/objects/Application_Information__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>