force-app/main/default/objects/Application_Information__c/fields/IndApplication__c.field-meta.xml
<CustomField>
    <fullName>IndApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Application Information</relationshipLabel>
    <relationshipName>Application_Information</relationshipName>
    <type>Lookup</type>
</CustomField>