force-app/main/default/objects/Application_Information__c/fields/Information_Type__c.field-meta.xml
<CustomField>
    <fullName>Information_Type__c</fullName>
    <label>Information Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business or Work</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Contact Mailing</fullName>
            </value>
            <value>
                <fullName>Contact Physical</fullName>
            </value>
            <value>
                <fullName>Mailing (e.g., PO Box)</fullName>
            </value>
            <value>
                <fullName>Personal or Home (Residence)</fullName>
            </value>
            <value>
                <fullName>Public Directory</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>