force-app/main/default/objects/Application_Information__c/fields/Legal_document_preparer_activities_List__c.field-meta.xml
<CustomField>
    <fullName>Legal_document_preparer_activities_List__c</fullName>
    <label>Legal document preparer activities List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>