force-app/main/default/objects/Application_Information__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Application Information</relationshipLabel>
    <relationshipName>Application_Information</relationshipName>
    <type>Lookup</type>
</CustomField>