force-app/main/default/objects/Application_Information__c/fields/License_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Registration_Status__c</fullName>
    <label>License/Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License Holder</fullName>
            </value>
            <value>
                <fullName>Trainee only</fullName>
            </value>
            <value>
                <fullName>Pending Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>