force-app/main/default/objects/Application_Information__c/fields/Other_Licenses_Held__c.field-meta.xml
<CustomField>
    <fullName>Other_Licenses_Held__c</fullName>
    <label>Other Licenses Held</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>