force-app/main/default/objects/Application_Information__c/fields/Position_Held__c.field-meta.xml
<CustomField>
    <fullName>Position_Held__c</fullName>
    <label>Position Held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>