force-app/main/default/objects/Application_Information__c/fields/State_Admitted__c.field-meta.xml
<CustomField>
    <fullName>State_Admitted__c</fullName>
    <label>State Admitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>