force-app/main/default/objects/Application_Information__c/fields/State_Denied__c.field-meta.xml
<CustomField>
    <fullName>State_Denied__c</fullName>
    <label>State Denied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>