force-app/main/default/objects/Application_Information__c/fields/State_Disbarred__c.field-meta.xml
<CustomField>
    <fullName>State_Disbarred__c</fullName>
    <label>State Disbarred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>