force-app/main/default/objects/Application_Information__c/fields/To_mm_yy__c.field-meta.xml
<CustomField>
    <fullName>To_mm_yy__c</fullName>
    <label>To (mm/yy)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>