force-app/main/default/objects/Application_Information__c/recordTypes/Business_Entity_Members.recordType-meta.xml
<RecordType>
    <fullName>Business_Entity_Members</fullName>
    <active>true</active>
    <description>To capture info from Business Entity Member Section in LDB Application</description>
    <label>Business Entity Members</label>
</RecordType>