force-app/main/default/objects/Application_Information__c/recordTypes/Certified_Legal_Document_Preparer_and_Trainees.recordType-meta.xml
<RecordType>
    <fullName>Certified_Legal_Document_Preparer_and_Trainees</fullName>
    <active>true</active>
    <description>To capture LDB Legal Document Preparers and Trainees</description>
    <label>Certified Legal Document Preparer and Trainees</label>
</RecordType>