force-app/main/default/objects/Application_Information__c/recordTypes/Certified_States.recordType-meta.xml
<RecordType>
    <fullName>Certified_States</fullName>
    <active>true</active>
    <description>Certified Reporter Certified States Information</description>
    <label>Certified States</label>
</RecordType>