force-app/main/default/objects/Application_Information__c/recordTypes/Contact_Address_Info.recordType-meta.xml
<RecordType>
    <fullName>Contact_Address_Info</fullName>
    <active>true</active>
    <description>Application Address Information</description>
    <label>Contact Address Information</label>
</RecordType>