force-app/main/default/objects/Application_Information__c/recordTypes/Denied_States.recordType-meta.xml
<RecordType>
    <fullName>Denied_States</fullName>
    <active>true</active>
    <description>States where Admissions Denied</description>
    <label>Denied States</label>
</RecordType>