force-app/main/default/objects/Application_Information__c/recordTypes/Disbarred_States.recordType-meta.xml
<RecordType>
    <fullName>Disbarred_States</fullName>
    <active>true</active>
    <description>States where disbarred from Practice</description>
    <label>Disbarred States</label>
</RecordType>