force-app/main/default/objects/Application_Information__c/recordTypes/Employment_History.recordType-meta.xml
<RecordType>
    <fullName>Employment_History</fullName>
    <active>true</active>
    <description>Employment History Information</description>
    <label>Employment History</label>
</RecordType>