force-app/main/default/objects/Application_Information__c/recordTypes/LDB_Additional_Locations.recordType-meta.xml
<RecordType>
    <fullName>LDB_Additional_Locations</fullName>
    <active>true</active>
    <description>Used to store additional location information from Legal Document Preparer related section in LDB Applications.</description>
    <label>LDB Additional Locations</label>
</RecordType>