force-app/main/default/objects/Application_Information__c/recordTypes/LDB_Other_Licenses.recordType-meta.xml
<RecordType>
    <fullName>LDB_Other_Licenses</fullName>
    <active>true</active>
    <description>Used to store other license information from Legal Document Preparer related section in LDB Applications.</description>
    <label>LDB Other Licenses</label>
</RecordType>