force-app/main/default/objects/Application_Information__c/recordTypes/Residential_History.recordType-meta.xml
<RecordType>
    <fullName>Residential_History</fullName>
    <active>true</active>
    <description>Residential History Information</description>
    <label>Residential History</label>
</RecordType>