force-app/main/default/objects/Application_Information__c/recordTypes/State_Admissions.recordType-meta.xml
<RecordType>
    <fullName>State_Admissions</fullName>
    <active>true</active>
    <description>States Admissions and Bar Numbers</description>
    <label>State Admissions</label>
</RecordType>