force-app/main/default/objects/Application_Information__c/listViews/CLD_Admin_Queue_Application_Information.listView-meta.xml
<ListView>
    <fullName>CLD_Admin_Queue_Application_Information</fullName>
    <filterScope>Queue</filterScope>
    <label>CLD Admin Queue</label>
    <queue>CLD_Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>